--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -26,19 +26,16 @@
     <div id="wrapper">
 
         <!-- Sidebar -->
+        {% set currentPath = app.request.get('_route') %}
+        {% set opciones = ["app_admin_users", "index_roles", "index_reparticion"] %}
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-            {# Logo TSJ #}
-            {% include 'base/logo.html.twig' %}
-            <hr class="sidebar-divider">
             {# Side Menú #}
             {% include 'base/side-menu.html.twig' %}
             <hr class="sidebar-divider d-none d-md-block">
-
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
             </div>
-
         </ul>
         <!-- End of Sidebar -->
 
@@ -114,7 +111,9 @@
         <script src="{{ asset('base/vendor/jquery-easing/jquery.easing.min.js') }}"></script>
         <!-- Custom scripts for all pages-->
         <script src="{{ asset('base/js/sb-admin-2.min.js') }}"></script>
-    {% endblock %}   
+    {% endblock %}
+
+    {% block modal_content %}{% endblock modal_content %}
 
 </body>
 
