--- a/templates/admin/user/user.html.twig
+++ b/templates/admin/user/user.html.twig
@@ -2,7 +2,7 @@
 
 {% block headerMain %}
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Lista de usuarios</h1>
+        <h1 class="h3 mb-0 text-dark"><b>Lista de usuarios</b></h1>
         <div class="align-items-center justify-content-end">
             <a href="{{ path('app_admin_new_user') }}" class="d-md-inline-block btn btn-sm btn-primary shadow-sm">
             <i class="fa fa-plus"></i> &nbsp; Nuevo
@@ -22,56 +22,56 @@
                 <thead>
                     {# SUSPENDIDO #}
                     <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;" width="80px">
-                        <div class="d-flex justify-content-between align-items-center">
-                            {{ knp_pagination_sortable(pagination, 'Activo', 'e.suspended') }}
+                        <div class="d-flex align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'Activo', 'e.suspended') }} &nbsp;
                             {% if pagination.getSort == 'e.suspended' and pagination.getDirection == 'asc' %}
-                                <i class="fa fa-level-up"></i>
+                               <i class="fas fa-caret-up"></i>
                             {% elseif pagination.getSort == 'e.suspended' and pagination.getDirection == 'desc' %}
-                                <i class="fa fa-level-down"></i>
+                                <i class="fas fa-caret-down"></i>
                             {% endif %}
                         </div>
                     </th>
                     {# ID #}
                     <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;" width="80px">
-                        <div class="d-flex justify-content-between align-items-center">
-                            {{ knp_pagination_sortable(pagination, 'ID', 'e.id') }}
+                        <div class="d-flex align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'ID', 'e.id') }} &nbsp;
                             {% if pagination.getSort == 'e.id' and pagination.getDirection == 'asc' %}
-                                <i class="fa fa-level-up"></i>
+                                <i class="fas fa-caret-up"></i>
                             {% elseif pagination.getSort == 'e.id' and pagination.getDirection == 'desc' %}
-                                <i class="fa fa-level-down"></i>
+                                <i class="fas fa-caret-down"></i>
                             {% endif %}
                         </div>
                     </th>
                     {# Nombre #}
                     <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
-                        <div class="d-flex justify-content-between align-items-center">
-                            {{ knp_pagination_sortable(pagination, 'Nombre', 'e.nombre') }}
+                        <div class="d-flex align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'Nombre', 'e.nombre') }} &nbsp;
                             {% if pagination.getSort == 'e.nombre' and pagination.getDirection == 'asc' %}
-                                <i class="fa fa-level-up"></i>
+                                <i class="fas fa-caret-up"></i>
                             {% elseif pagination.getSort == 'e.nombre' and pagination.getDirection == 'desc' %}
-                                <i class="fa fa-level-down"></i>
+                                <i class="fas fa-caret-down"></i>
                             {% endif %}
                         </div>
                     </th>
                     {# Username #}
                     <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
-                        <div class="d-flex justify-content-between align-items-center">
-                            {{ knp_pagination_sortable(pagination, 'Usuario', 'e.username') }}
+                        <div class="d-flex align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'Usuario', 'e.username') }} &nbsp;
                             {% if pagination.getSort == 'e.username' and pagination.getDirection == 'asc' %}
-                                <i class="fa fa-level-up"></i>
+                                <i class="fas fa-caret-up"></i>
                             {% elseif pagination.getSort == 'e.username' and pagination.getDirection == 'desc' %}
-                                <i class="fa fa-level-down"></i>
+                                <i class="fas fa-caret-down"></i>
                             {% endif %}
                         </div>
                     </th>
                     {# Email #}
                     <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
-                        <div class="d-flex justify-content-between align-items-center">
-                            {{ knp_pagination_sortable(pagination, 'Email', 'e.email') }}
+                        <div class="d-flex align-items-center">
+                            {{ knp_pagination_sortable(pagination, 'Email', 'e.email') }} &nbsp;
                             {% if pagination.getSort == 'e.email' and pagination.getDirection == 'asc' %}
-                                <i class="fa fa-level-up"></i>
+                                <i class="fas fa-caret-up"></i>
                             {% elseif pagination.getSort == 'e.email' and pagination.getDirection == 'desc' %}
-                                <i class="fa fa-level-down"></i>
+                                <i class="fas fa-caret-down"></i>
                             {% endif %}
                         </div>
                     </th>
@@ -84,18 +84,18 @@
                 <tbody>
                     {% for user in pagination %}
                         <tr>
-                            <td class="align-middle td-cursor text-center" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">
+                            <td class="align-middle td-cursor text-center cursorPointer" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">
                                 {% if user.suspended %}
                                     <i class="fa fa-minus-square text-danger"></i>
                                 {% else %}
                                     <i class="fa fa-check-square text-success"></i>
                                 {% endif %}
                             </td>
-                            <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.id }}</td>
-                            <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.nombre }}</td>
-                            <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.username }}</td>
-                            <td class="align-middle td-cursor" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.email }}</td>
-                            <td class="btn-cell-table align-middle text-center">
+                            <td class="align-middle td-cursor cursorPointer" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.id }}</td>
+                            <td class="align-middle td-cursor cursorPointer" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.nombre }}</td>
+                            <td class="align-middle td-cursor cursorPointer" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.username }}</td>
+                            <td class="align-middle td-cursor cursorPointer" onClick="window.location='{{ path('show_user',{"id":user.id}) }}'">{{ user.email }}</td>
+                            <td class="btn-cell-table align-middle text-center cursorPointer">
                                 <a class="btn btn-primary btn-sm btn-table-margin mt-1 mb-1" alt="Editar" href="{{ path('app_admin_edit_user',{"id":user.id}) }}">
                                     <i class="fa fa-edit"></i>
                                 </a>
