--- a/templates/base/side-menu.html.twig
+++ b/templates/base/side-menu.html.twig
@@ -1,3 +1,19 @@
+{# Logo Top #}
+<a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+    <div class="sidebar-brand-icon rotate-n-15">
+        <img id="logo-side" class="logo-side" src="{{ asset('base/img/logo.png') }}" alt="TSJ" width="50">
+    </div>
+</a>
+<hr class="sidebar-divider my-0">
+
+{# Menú Side #}
+<li class="nav-item {{currentPath == 'inicio_index' ? 'active' : ''}}">
+    <a class="nav-link" href="{{ path('inicio_index') }}">        
+        <i class="fa fa-home"></i>
+        <span>Home</span>
+    </a>
+</li>
+<hr class="sidebar-divider">
 
 <!-- Heading -->
 <div class="sidebar-heading">
@@ -34,7 +50,7 @@
 <hr class="sidebar-divider">
 
 {# Administración #}
-<li class="nav-item">
+<li class="nav-item {{ currentPath in opciones ? 'active' : '' }}">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
         aria-expanded="true" aria-controls="collapseTwo">
         <i class="fa fa-cog"></i>
