--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -47,6 +47,7 @@
 
                 <div class="container-fluid">
                     {# Heading Main #}
+                    {{ include('base/_flash.html.twig') }}
                     {% block headerMain %}
                         
                     {% endblock %}
