--- a/templates/admin/roles/_delete_form.html.twig
+++ b/templates/admin/roles/_delete_form.html.twig
@@ -13,7 +13,7 @@
     <button class="btn btn-danger float-right" type="submit" >
       Si, eliminar
     </button>
-    <button type="button" class="btn btn-secondary float-right" data-dismiss="modal">
+    <button type="button" class="btn btn-secondary float-right mr-2" data-dismiss="modal">
       No, cancelar
     </button>
   </form>
