--- a/templates/admin/roles/new.html.twig
+++ b/templates/admin/roles/new.html.twig
@@ -1,27 +1,22 @@
-{% extends "admin/bars.html.twig" %}
+{% extends "base/index.html.twig" %}
 
-{% block contenpage %}
-
- 	<div class="">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="x_panel">
-                    <div class="x_title">
-                        <h2 class="title-page">Roles</h2>
-						<a class="btn btn-primary btn-sm float-right" style="margin-right:15px;" href="{{ app.request.headers.get('referer') }}">
-							<i class="fa fa-mail-reply"></i> &nbsp; Volver atrás
-						</a>
-                        <div class="clearfix"></div>
-                    </div>
-			
-                	<div class="card">
-                  		<div class="card-body">
-                    		{{ include('admin/roles/_form.html.twig') }}
-                  		</div>
-                	</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
+{% block headerMain %}
+    <div class="d-sm-flex align-items-center justify-content-between mb-4">
+        <h1 class="h4 mb-0 text-dark"><b>{% if currentPath == 'new_role' %} Nuevo rol {% else %} Editar rol {% endif %}</b></h1>
+        <div class="align-items-center justify-content-end">
+          <a href="{{ path('index_roles') }}" class="d-md-inline-block btn btn-sm btn-primary shadow-sm">
+            <i class="fa fa-reply"></i> &nbsp; Ver el listado
+          </a>
+        </div>        
+    </div>
 {% endblock %}
+
+{% block rowMain %}
+  <div class="col">
+    <div class="card">
+        <div class="card-body">
+            {{ include('admin/roles/_form.html.twig') }}
+        </div>
+    </div>
+  </div>
+{% endblock rowMain %}
