Vistas de recuperación

--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,6 +1,6 @@
 {% extends 'security/login.html.twig' %}
 
-{% block title %}Password Reset Email Sent
+{% block title %}Recuperación de contraseña
 {% endblock %}
 
 {% block body %}
