--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,6 +1,6 @@
 {% extends 'security/login.html.twig' %}
 
-{% block title %}Reset your password
+{% block title %}Recuperación de contraseña
 {% endblock %}
 {% block bodyclass %}class="login"{% endblock %}
 {% block body %}
