--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -10,7 +10,7 @@
 	<div class="login_wrapper">
 			<div class="login_form_header">
 				<div class="isologotipo">
-					<h2>SIDI - TSJ La Rioja</h2>
+					<h2>{{ site_name }}</h2>
 				</div>
 			</div>
 		<div class="animate form login_form">
