--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,3 +1,99 @@
+<!DOCTYPE html>
+<html lang="es">
+
+	<head>
+
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="">
+		<meta name="author" content="">
+
+		<link rel="icon" href="{{ asset('base/img/favicon.ico') }}" type="image/ico" />
+
+		<title>{% block title %}Login{% endblock %} | TSJ</title>
+
+		<link href="{{ asset('base/vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
+		<link
+			href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+			rel="stylesheet">
+
+		<link href="{{ asset('base/css/sb-admin-2.min.css') }}" rel="stylesheet">
+
+	</head>
+
+	<body class="bg-gradient-primary">
+
+		<div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-center" style="overflow: auto;">
+			<div class="row w-25" style="min-width:400px; min-height: 500px;">
+				<div class="d-none d-md-none d-lg-block col-lg-4 pr-1 pl-0">
+					<div class="card h-100">
+						<div class="card-body cardToLogin">
+							<img id="logo-side" class="logo-side" src="{{ asset('base/img/logo.png') }}" alt="TSJ" width="100">
+							<p style="font-size: 0.8rem;">
+								©{{ "now"|date("Y") }} </br> Tribunal Superior de Justicia
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-12 col-lg-8 pl-0 pr-0">
+					<div class="card h-100">
+						<h5 class="mt-4 mb-0" style="color: black;font-weight: 600;">{{ site_name }}</h5>	
+						<div class="card-body pt-0">											
+							<form method="post" class="cardToLogin h-100">						
+								<div class="mt-3 mb-3 w-100">
+									<span>Usuario:</span>
+									<input type="text" value="{{ last_username }}" name="username" id="inputText" class="form-control inputLoggin" required autofocus>
+								</div>
+								<div class="mb-3 w-100">
+									<span>Contraseña:</span>
+									<input type="password" name="password" id="inputPassword" class="form-control inputLoggin" required>
+									<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+								</div>
+								<div>
+									<a class="reset_pass mt-3" href="{{path('app_forgot_password_request')}}">¿Olvidó su contraseña?</a>
+								</div>
+								<div class="w-100">
+									<button class="btn btn-success submit mt-3 inputLoggin w-100" href="index.html">Ingresar</button>
+								</div>
+
+								<p style="font-size: 0.8rem;">
+									Función Judicial </br> <b>Provincia de La Rioja</b>
+								</p>								
+
+								<div class="clearfix"></div>
+								{% if error %}
+									<div class="alert alert-danger">Usuario y/o contraseña incorrectos</div>
+								{% endif %}
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>			
+		</div>
+
+		<!-- Bootstrap core JavaScript-->
+        <script src="{{ asset('base/vendor/jquery/jquery.min.js') }}"></script>
+        <script src="{{ asset('base/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+
+        <!-- Core plugin JavaScript-->
+        <script src="{{ asset('base/vendor/jquery-easing/jquery.easing.min.js') }}"></script>
+        <!-- Custom scripts for all pages-->
+        <script src="{{ asset('base/js/sb-admin-2.min.js') }}"></script>
+
+	</body>
+
+</html>
+
+{# 
+
+
+
+
+
+
+
+
 {% extends 'base.html.twig' %}
 
 {% block title %}Login
@@ -85,3 +181,4 @@
 	</div>
 {% endblock %}
 {% block javascripts %}{% endblock %}
+ #}
