--- a/templates/base/top-menu.html.twig
+++ b/templates/base/top-menu.html.twig
@@ -6,8 +6,10 @@
     <i class="fa fa-bars"></i>
 </button>
 
-{# Nombre del sistema #}
-{% include 'base/nombre.html.twig' %}
+<!-- Nombre del Sistema -->
+<div class="d-none d-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
+    <b>{{ site_name }} </b>
+</div>
 
 <!-- Topbar Navbar -->
 <ul class="navbar-nav ml-auto">
