--- a/templates/admin/params/changeMdpForm.html.twig
+++ b/templates/admin/params/changeMdpForm.html.twig
@@ -18,7 +18,7 @@
         <div class="card-body">
             {{ form_start(passwordForm) }}
             {{ form_widget(passwordForm) }}
-            <a class="btn btn-secondary" href="{{ path('app_admin_index') }}">Cancelar</a>
+            <a class="btn btn-secondary" href="{{ path('inicio_index') }}">Cancelar</a>
             <button type="submit" name="valider" class="btn btn-success">Guardar</button>
             {{ form_end(passwordForm) }}
         </div>
