--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,5 +21,6 @@
     </head>
     <body id="page-top">
         {% block body %}{% endblock %}
+        {% block jsBottom %}{% endblock %}
     </body>
 </html>
