--- a/templates/base/side-menu.html.twig
+++ b/templates/base/side-menu.html.twig
@@ -1,6 +1,6 @@
 {# Logo Top #}
-<a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-    <div class="sidebar-brand-icon rotate-n-15">
+<a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('inicio_index') }}">
+    <div class="sidebar-brand-icon">
         <img id="logo-side" class="logo-side" src="{{ asset('base/img/logo.png') }}" alt="TSJ" width="50">
     </div>
 </a>
