--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,11 +1,10 @@
-<h1>Hi!</h1>
+<h1>¡Hola!</h1>
 
 <p>
-    To reset your password, please visit
-    <a href="{{ url('app_reset_password', {token: resetToken.token}) }}">here</a>
-    This link will expire in {{ tokenLifetime|date('g') }} hour(s)..
+    Para reiniciar tu password, haz click <a href="{{ url('app_reset_password', {token: resetToken.token}) }}"><b>aquí</b></a>.
+    El enlace expirará en: {{ tokenLifetime|date('g') }} hora(s).
 </p>
 
 <p>
-    Cheers!
+    Tribunal superior de Justicia - Secretaría de Informática - La Rioja
 </p>
